# spaloginpoc

ansible/: configure_nginx.yml  configure_rust.yml  refresh-inventory.sh  requirements.yml
backend/: app.py
backend-rs/: Cargo.toml
backend-rs/src/: main.rs
backend/templates/: index.html  login.html
nginx/: spapoc.conf
spa/: index.html
spa/css/: style.css
spa/js/: main.js
vm/: .gitignore  cloudinit.yml.j2  vm-create.sh  vm-rsync-download.sh  vm-rsync-upload.sh  vm-ssh.sh
