[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
minijinja = { version = "1.0.12", features = ["loader"] }
tokio = { version = "1.36.0", features = ["full"] }
